assets/css/custom.css
/* ... */
#groups-list .item-entry {
	flex-grow: 1;
}
.my-groups #groups-list .bfc-group-latest-post,
.mygroups #groups-list .bfc-group-latest-post {
	flex-grow: 1;
}

#buddypress #groups-list .item-block {
	flex-basis: 22%;
	min-width: 220px;
}

#buddypress #groups-list .groups-loop-buttons {
	min-width: 200px;
}

.other-groups #groups-list .group-members-wrap{
	width: 220px;
}

.other-groups #groups-list .bs-group-members img {
	border-radius: 20%;
	width: 40px;
	height: 40px;
	padding: 2px;
	border: 1px solid #fff;
    max-width: 40px;
    display: inline-block;
    margin-right: -3px;
    position: relative;
    z-index: 3;
}

.bfc-write-new .bb-icon-edit {
	font-size: 18px;
    line-height: 36px;
}

.other-groups #groups-list .bs-group-members .bfc-tooltip, .bfc-helptip {
	position: relative;
	display: inline-block;
}

.bfc-helptip {
	width: 36px;
}

.other-groups #groups-list .bs-group-members .bfc-tooltiptext {
	visibility: hidden;
	width: 120px;
	background-color: #555;
	color: #fff;
	text-align: center;
	padding: 5px 0;
	border-radius: 6px;
  
	/* Position the tooltip text */
	position: absolute;
	z-index: 10;
	bottom: 125%;
	left: 50%;
	margin-left: -60px;
  
	/* Fade in tooltip */
	opacity: 0;
	transition: opacity 0.3s;  
}

.bfc-widget-head .bfc-helptip .bfc-helptiptext {
	visibility: hidden;
	width: 240px;
	background-color: rgb(255, 255, 255);
	color: #555;
	text-align: left;
	padding: 5px 10px;
	font-size: 13px;
	border-style: solid;
	border-width: 1px;
	border-color: #555;
	border-radius: 6px;
	
	/* Position the tooltip text */
	position: absolute;
	z-index: 10;
	top: 80%;
	right: 0px;
	
	/* Fade in tooltip */
	opacity: 0;
	transition: opacity 0.3s;  
	
}

.group-home-page .bfc-widget-head .bfc-helptip .bfc-helptiptext {
	width: 320px;
}

.other-groups #groups-list .bs-group-members .bfc-tooltiptext::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: #555 transparent transparent transparent;  
}

.bfc-widget-head .bfc-helptip .bfc-helptiptext:after {
	content: "";
	position: absolute;
	bottom: 100%;
	right: 4px;
	margin-left: -5px;
	border-width: 6px;
	border-style: solid;
	border-color: transparent transparent #555 transparent;  
}

.other-groups #groups-list .bs-group-members .bfc-tooltip:hover .bfc-tooltiptext, .bfc-helptip:hover .bfc-helptiptext {
	visibility: visible;
	opacity: 1;
}

.other-groups #groups-list > .item-entry:hover {
	z-index: 999;
}

.other-groups #groups-list .bs-group-members .bfc-tooltiptext>a {
	color: rgb(218, 208, 255)
}

.bfc-widget-head {
	display: flex;
}

.bfc-widget-head h2, .buddypress .buddypress-wrap .bfc-widget-head h2 {
	flex-grow: 1;
	margin-bottom: 8px;
}

.bfc-helptip > .bb-icon-help-circle {
	font-size: 20px;
	line-height: 36px;
	float: right;
	color: #999;
}

.post .entry-content p {
	font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
	font-size: 17px;
	margin-bottom: 20px;
}

#buddypress #item-body div.bp-profile-content table.profile-fields tr td {
	padding-bottom: 4px;
}

.buddypress-wrap table.profile-fields td.data>p {
	margin: 0;
}

#buddypress .bbp-reply-content.bs-forum-content .bfc-post-functions {
	display: flex;
}

#buddypress .bbp-reply-content.bs-forum-content .bfc-post-functions .bfc-like-section {
	flex-grow: 1;
	margin-top: -9px;
}

.like-state > .like-state-likes > span {
	color: rgb(85,85,85);
	font-family: "SF UI Text", sans-serif;
	font-size: 14px;
	font-weight: 400;
	letter-spacing: -.18px;
	line-height: 16px;
}

#buddypress .bs-forum-content .post-like-meta .generic-button .bfc-post-like {
	line-height: 18px;
}

.post-like-meta > .generic-button > .bfc-post-like > .bfc-post-like-text {
	color: rgb(127, 134, 143);
	font-family: "SF UI Text", sans-serif;
	font-size: 14px;
	font-weight: 400;
	letter-spacing: -.18px;
	line-height: 14px;
	margin-left: 2px;
	text-align: center;
}

.bfc-la-ul .like-text {
	color: #a3a5a9;
    font-size: 13px;
}

.post-like-meta > .generic-button > .bfc-post-like:before {
	content: "\e815";
	color: rgb(0, 124, 255);
	display: inline-block;
	font-family: bb-icons;
	font-size: 22px;
	line-height: 22px;
	min-width: 22px;
	position: relative;
	top: -3px;
	vertical-align: middle;
  }

  .bfc-widget-actions {
	  font-size: 13px;
	  text-align: right;
  }

  .bfc-widget-actions .bb-icon-arrow-up-right,
  .bfc-widget-actions.bb-icon-arrow-up-right,
  .bfc-forumlist.bb-icon-arrow-up-right {
	  font-size: 12px;
	  border-style: solid;
	  border-width: 1px;
	  border-color: #87bff9;
	  border-radius: 20%;
	  margin-right: 4px;
  }

  .bfc-forum-links {
	  display: flex;
  }

  .bsp-la-reply-topic-title,
  .bsp-la-title {
	  flex-grow: 1;
  }

  .bsp-la-reply-topic-title {
	  margin-bottom: 14px;
	  line-height: 21px;
  }
 .bfc-la-topic-author-avatar {
	height: 40px;
    position: relative;
 }

 #buddypress a.view.activity-time-since {
	display: inline-block;
 }

 .header-aside .bfc-message-links {
	 display: flex;
 }

 .header-aside .bfc-message-links .delete-all {
	flex-grow: 1;
}

.group-home-page .bfc-group-organizers {
	margin-bottom: 28px;
}

.buddypress-wrap .members-directory-container .bp-navs .bfc-members-filter {
	float: right;
}

#members-order-by {
	margin-bottom: 0;
}

#buddypress .members-directory-container .bp-secondary-header {
	display: none;
}

.buddypress-wrap.bp-dir-hori-nav:not(.bp-vertical-navs) nav {
	margin-bottom: 25px;
}

.buddypress-wrap .members-directory-container .bp-navs .bfc-members-filter .select-wrap {
    margin-right: 0;
}
@media screen and (min-width: 32em) {
	.buddypress-wrap .members-directory-container .bp-navs .bfc-members-filter .select-wrap {
    margin-right: 0;
}
}

